# datadog-cdk-constructs

./: .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci.yml  .ncurc.cjs  .npmignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .projenrc.js  .yarnrc.yml  API.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-3rdparty.csv  NOTICE  README.md  cdk.context.json  cdk.json  eslint.config.mjs  jest.config.js  package-lock.json  package.json  repository.datadog.yml  tsconfig.dev.json  tsconfig.jest.json  tsconfig.json  tslint.json  version.json
.github/: CODEOWNERS  pull_request_template.md
.projen/: deps.json  files.json  tasks.json
common/: constants.ts  datadogSharedLogic.ts  env.ts  forwarderSharedLogic.ts  interfaces.ts  layerSharedLogic.ts  redirect.ts  transport.ts
datadog-cdk-constructs/: Dockerfile  gitlab-config.yml  release.sh
datadog-cloudformation-macro/: .gitlab-ci.yml
ddcdkconstruct/: APMFeatureConfig.go  CWSFeatureConfig.go  Cardinality.go  Datadog.go  DatadogECSBaseProps.go  DatadogECSFargate.go  DatadogECSFargateProps.go  DatadogECSFargateTaskDefinition.go  DatadogECSFargateTaskDefinition__checks.go  DatadogECSFargateTaskDefinition__no_checks.go  DatadogECSFargate__checks.go  DatadogECSFargate__no_checks.go  DatadogECSLogDriverProps.go  DatadogFirelensOptions.go  DatadogLambda.go  DatadogLambdaProps.go  DatadogLambdaStrictProps.go  DatadogLambda__checks.go  DatadogLambda__no_checks.go  DatadogStepFunctions.go  DatadogStepFunctions__checks.go  DogstatsdFeatureConfig.go  FluentbitConfig.go  (+13 more)
terraform-autogen/: .gitignore  Dockerfile  README.md  autogen_config.example.json  campaign.sh  campaigner_config.yaml  pyproject.toml
terraform-autogen/src/: __main__.py  config.py  constants.py  docs.py  implementation.py  outputs.py  schema.py  variables.py  versions.py
(+460 files in other folders)
