[project]
name = "terraform-autogen"
version = "0.1.0"
description = "A tool for automatic Terraform Wrapper Module generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic==2.11.7"]

[project.optional-dependencies]
dev = ["ruff==0.12.5", "pyright==1.1.403"]

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
tf-autogen = "src.__main__:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = ["E501", "B905"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
